# turbogrep

./: .gitignore  Cargo.toml  README.md  TODO.md  profile.sh
.claude/: settings.local.json
src/: chunker.rs  config.rs  embeddings.rs  lib.rs  main.rs  progress.rs  project.rs  search.rs  sync.rs  turbopuffer.rs
tests/: chunker_tests.rs  chunking_repo_tests.rs  integration_sync_tests.rs  parser_tests.rs  sync_tests.rs
tests/chunker/: c_test.rs  cpp_test.rs  go_test.rs  java_test.rs  javascript_test.rs  mod.rs  python_test.rs  rust_struct_test.rs  rust_test.rs
